{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 7,
  "lineage": "29cb42da-e973-e71f-4b07-f9803fa97f18",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terraform-vpc-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:339713100354:internet-gateway/igw-0a271f1ab04cf007a",
            "id": "igw-0a271f1ab04cf007a",
            "owner_id": "339713100354",
            "tags": {
              "Name": "terraform-vpc-igw"
            },
            "tags_all": {
              "Name": "terraform-vpc-igw"
            },
            "vpc_id": "vpc-008a6a21daa7b34a7"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "entry",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a271f1ab04cf007a",
            "id": "r-rtb-05702971d634a4d3f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05702971d634a4d3f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.terraform-vpc-igw",
            "aws_route_table.terraform-pub-sub-rt",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-pub-sub-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:339713100354:route-table/rtb-05702971d634a4d3f",
            "id": "rtb-05702971d634a4d3f",
            "owner_id": "339713100354",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "terraform-pub-sub-rt"
            },
            "tags_all": {
              "Name": "terraform-pub-sub-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-008a6a21daa7b34a7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ffdc2972a1da34f7",
            "route_table_id": "rtb-05702971d634a4d3f",
            "subnet_id": "subnet-0120dcba99011e54c"
          },
          "dependencies": [
            "aws_route_table.terraform-pub-sub-rt",
            "aws_subnet.public-sub",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:339713100354:subnet/subnet-0120dcba99011e54c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "30.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0120dcba99011e54c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339713100354",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-sub-terraform-vpc-01"
            },
            "tags_all": {
              "Name": "public-sub-terraform-vpc-01"
            },
            "vpc_id": "vpc-008a6a21daa7b34a7"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:339713100354:vpc/vpc-008a6a21daa7b34a7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "30.0.0.0/16",
            "default_network_acl_id": "acl-0a4b96bdac7677b45",
            "default_route_table_id": "rtb-0217f1276a569169d",
            "default_security_group_id": "sg-09d74cef599b41afa",
            "dhcp_options_id": "dopt-03cc35b57571e7135",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-008a6a21daa7b34a7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0217f1276a569169d",
            "owner_id": "339713100354",
            "tags": {
              "Name": "fusion-terraform-vpc"
            },
            "tags_all": {
              "Name": "fusion-terraform-vpc"
            }
          }
        }
      ]
    }
  ]
}